--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.128.0",
+    "fastmcp>=2.14.4",
     "playwright>=1.57.0",
     "pydantic>=2.12.5",
     "python-multipart>=0.0.22",
