--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dnspython>=2.8.0",
     "fastapi>=0.128.0",
     "fastmcp>=2.14.4",
     "playwright>=1.57.0",
