--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.128.0
 fastmcp==2.14.4
-motor==3.3.2
+motor>=3.6.0
+dnspython>=2.4.0
 openapi-pydantic==0.5.1
 playwright==1.57.0
 pydantic==2.12.5
